--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,4 +11,8 @@ spring:
       hibernate:
       dialect: org.hibernate.dialect.MySQL8Dialect
       show-sql: false
+  springdoc:
+    pathsToMatch: /pessoa/**
+    swagger-ui:
+      use-root-path: true
 
